- modified BitOps.cpp to get it to work on Windows 32-bit - Integrated the PostgreSQL cartridge build in cmake - Slight modifications to the AvalonTools building procedure - modified UnitTestInchi.py to make it work under Windows   with Python 3.4

--- a/Code/PgSQL/rdkit/README
+++ b/Code/PgSQL/rdkit/README
@@ -1,4 +1,4 @@
-contrib/rdkit is a PostgreSQL contribution module, which implements 
+PgSQL/rdkit is a PostgreSQL contribution module, which implements 
 *mol* datatype to describe molecules and *fp* datatype for fingerprints,  
 basic comparison operations, similarity operation (tanimoto, dice) and  index 
 support (using GiST indexing framework).
@@ -8,6 +8,10 @@ Compatibility: PostgreSQL 8.4+
  that you have the -devel package installed.
 
 Installation:
+if PostgreSQL is installed in a location where CMake is unable to find it,
+either set the environment variable PostgreSQL_ROOT or add a
+"-DPostgreSQL_ROOT" switch to the cmake command line, pointing to the
+PostgreSQL root directory, e.g. C:\Program Files (x86)\PostgreSQL\9.5
 
  Module assumes that the RDKit is installed in $RDBASE and that $BOOSTHOME
  points to the directory where boost is installed.
