--- a/External/AvalonTools/README
+++ b/External/AvalonTools/README
@@ -4,58 +4,175 @@ http://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.1_beta/Avalo
 
 Note that the version number is important.
 
-Extract the tar file somewhere; the source requred by the RDKit is in
+Extract the tar file in $RDBASE/External/AvalonTools; the source required by the RDKit is in
 the SourceDistribution directory.
 
-Apply the following diff to the files
-SourceDistribution/common/reaccsio.c and
-SourceDistribution/common/smi2mol.c:
+cd to $RDBASE/External/AvalonTools and apply the following patch:
 
-$ diff SourceDistribution/common ~/avalontoolkit_beta/SourceDistribution/common
-diff SourceDistribution/common/reaccsio.c /cygdrive/c/Users/glandrum/avalontoolkit_beta/SourceDistribution/common/reaccsio.c
-1400d1399
-<
-1414c1413
-<                MyFree((char *)tempdir);
----
->                //MyFree((char *)tempdir);
-1433d1431
-<
-1443c1441
-<
----
->    fprintf(stderr,"  returning\n");
-
-diff SourceDistribution/common/smi2mol.c /cygdrive/c/Users/glandrum/avalontoolkit_beta/SourceDistribution/common/smi2mol.c
-936c936
-< fprintf(stderr, "2: opening branch '%s'\n", tmp);
----
->                 /* fprintf(stderr, "2: opening branch '%s'\n", tmp); */
-1012c1012
-< fprintf(stderr, "closing branch '%s'\n", tmp);
----
->           /* fprintf(stderr, "closing branch '%s'\n", tmp); */
-1543c1543
-< fprintf(stderr, ".{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);
----
->           /*fprintf(stderr, ".{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);*/
-1550c1550
-< fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);
----
->           /*fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);*/
-1574c1574
-< fprintf(stderr, "1: opening branch '%s'\n", num_buf);
----
->                    /*fprintf(stderr, "1: opening branch '%s'\n", num_buf);*/
-1592c1592
-< fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);
----
->            /*fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);*/
-1596c1596
-< fprintf(stderr, "\n");
----
->       /*fprintf(stderr, "\n");*/
-
-
-
-
+$ patch -p0 << EOF
+*** SourceDistribution/common/reaccsio.c.orig	Sun Jan 17 10:27:06 2016
+--- SourceDistribution/common/reaccsio.c	Sun Jan 17 10:32:10 2016
+***************
+*** 1397,1403 ****
+     char *tempfile;
+     int idir;
+     char * MolStr;
+- 
+     tempfile = NULL;
+     if ((fp = tmpfile()) == NULL)
+     {
+--- 1397,1402 ----
+***************
+*** 1411,1417 ****
+              {
+                 tempfile = tempnam(tempdir, (const char *)NULL);
+                 fp = fopen(tempfile, "wb+");
+!                MyFree((char *)tempdir);
+                 if (IsNULL(fp))
+                 {
+                     MyFree((char *)tempfile);
+--- 1410,1416 ----
+              {
+                 tempfile = tempnam(tempdir, (const char *)NULL);
+                 fp = fopen(tempfile, "wb+");
+!                //MyFree((char *)tempdir);
+                 if (IsNULL(fp))
+                 {
+                     MyFree((char *)tempfile);
+***************
+*** 1430,1436 ****
+     }
+  
+     PrintREACCSMolecule(fp, mp,"");
+- 
+     rewind(fp);
+  
+     MolStr = ReadFile(fp);
+--- 1429,1434 ----
+***************
+*** 1440,1446 ****
+        remove(tempfile);
+        MyFree((char *)tempfile);
+     }
+! 
+     if (MolStr == NULL)
+        AddMsgToList("PrintREACCSMolecule did return NULL");
+  
+--- 1438,1444 ----
+        remove(tempfile);
+        MyFree((char *)tempfile);
+     }
+!    fprintf(stderr,"  returning\n");
+     if (MolStr == NULL)
+        AddMsgToList("PrintREACCSMolecule did return NULL");
+  
+*** SourceDistribution/common/smi2mol.c.orig	Sun Jan 17 10:27:12 2016
+--- SourceDistribution/common/smi2mol.c	Sun Jan 17 10:40:16 2016
+***************
+*** 933,939 ****
+                                  mp->bond_array[nbp[istart].bonds[j]].color,
+                                  expect_smarts);
+                    closures = StrAppend(closures, NULL, tmp); /* output loop indicator */
+! fprintf(stderr, "2: opening branch '%s'\n", tmp);
+                    open_branches[i] = nbp[istart].atoms[j];   /* save label */
+                    open_neighbours[i] = istart;               /* save from atom */
+                    break;
+--- 933,939 ----
+                                  mp->bond_array[nbp[istart].bonds[j]].color,
+                                  expect_smarts);
+                    closures = StrAppend(closures, NULL, tmp); /* output loop indicator */
+!                /* fprintf(stderr, "2: opening branch '%s'\n", tmp); */
+                    open_branches[i] = nbp[istart].atoms[j];   /* save label */
+                    open_neighbours[i] = istart;               /* save from atom */
+                    break;
+***************
+*** 1009,1015 ****
+              else
+                 sprintf(tmp, "%d", i+1);
+              closures = StrAppend(closures, NULL, tmp);
+! fprintf(stderr, "closing branch '%s'\n", tmp);
+              open_branches[i] = -2;
+              open_neighbours[i] = -1;
+           }
+--- 1009,1015 ----
+              else
+                 sprintf(tmp, "%d", i+1);
+              closures = StrAppend(closures, NULL, tmp);
+!          /* fprintf(stderr, "closing branch '%s'\n", tmp); */
+              open_branches[i] = -2;
+              open_neighbours[i] = -1;
+           }
+***************
+*** 1540,1553 ****
+              result = StrAppend(result, NULL, ".{");
+              result = StrAppend(result, NULL, mp->atom_array[ibranch].atext);
+              result = StrAppend(result, NULL, "}");
+! fprintf(stderr, ".{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);
+           }
+           else
+           {
+              result = StrAppend(result, NULL, "{");
+              result = StrAppend(result, NULL, mp->atom_array[ibranch].atext);
+              result = StrAppend(result, NULL, "}");
+! fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);
+           }
+           mp->atom_array[ibranch].color = ++nsmi_atoms;
+           // now we trace the shortcut string
+--- 1540,1553 ----
+              result = StrAppend(result, NULL, ".{");
+              result = StrAppend(result, NULL, mp->atom_array[ibranch].atext);
+              result = StrAppend(result, NULL, "}");
+!          /* fprintf(stderr, ".{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1); */
+           }
+           else
+           {
+              result = StrAppend(result, NULL, "{");
+              result = StrAppend(result, NULL, mp->atom_array[ibranch].atext);
+              result = StrAppend(result, NULL, "}");
+!          /* fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1); */
+           }
+           mp->atom_array[ibranch].color = ++nsmi_atoms;
+           // now we trace the shortcut string
+***************
+*** 1571,1577 ****
+                          sprintf(num_buf, "%%%d", i+1);
+                       else
+                          sprintf(num_buf, "%d", i+1);
+! fprintf(stderr, "1: opening branch '%s'\n", num_buf);
+                       closures = BndAppend(closures, NULL,
+                                  mp->bond_array[nbp[ibranch].bonds[j]].bond_type,
+                                  mp->bond_array[nbp[ibranch].bonds[j]].atoms[0] == ibranch+1,
+--- 1571,1577 ----
+                          sprintf(num_buf, "%%%d", i+1);
+                       else
+                          sprintf(num_buf, "%d", i+1);
+!                   /* fprintf(stderr, "1: opening branch '%s'\n", num_buf); */
+                       closures = BndAppend(closures, NULL,
+                                  mp->bond_array[nbp[ibranch].bonds[j]].bond_type,
+                                  mp->bond_array[nbp[ibranch].bonds[j]].atoms[0] == ibranch+1,
+***************
+*** 1589,1599 ****
+               result = StrAppend(result, NULL, "{");
+               result = StrAppend(result, NULL, mp->atom_array[ibranch].atext);
+               result = StrAppend(result, NULL, "}");
+! fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1);
+               mp->atom_array[ibranch].color = ++nsmi_atoms;
+           }
+        }
+! fprintf(stderr, "\n");
+     }
+     // now, do regular atom processing
+     for (;;)
+--- 1589,1599 ----
+               result = StrAppend(result, NULL, "{");
+               result = StrAppend(result, NULL, mp->atom_array[ibranch].atext);
+               result = StrAppend(result, NULL, "}");
+!           /* fprintf(stderr, "{%s:%d}", mp->atom_array[ibranch].atext, ibranch+1); */
+               mp->atom_array[ibranch].color = ++nsmi_atoms;
+           }
+        }
+!    /* fprintf(stderr, "\n"); */
+     }
+     // now, do regular atom processing
+     for (;;)
+EOF
