--- a/External/AvalonTools/README
+++ b/External/AvalonTools/README
@@ -1,12 +1,27 @@
-To use the Avalon Toolkit support in the RDKit, first download a copy of the
-source from:
-http://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.1_beta/AvalonToolkit_1.1_beta.source.tar/download
+To build the optional Avalon Toolkit support, Avalon Toolkit sources are
+needed. If Avalon Toolkit could not be found, the CMake build system will attempt to
+download it from the following URL:
+
+http://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.2/AvalonToolkit_1.2.0.source.tar
+
+The default download URL and MD5 checksum can be overridden with the
+following CMake definitions:
+
+AVALONTOOLS_URL
+AVALONTOOLS_MD5SUM
+
+If AVALONTOOLS_URL is set to "", no download will be attempted.
+If AVALONTOOLS_MD5SUM is set to "", no MD5 checksum will be performed.
+
+If you prefer to install Avalon Toolkit sources manually, please download
+a copy of the source from:
+http://sourceforge.net/projects/avalontoolkit/files/AvalonToolkit_1.2/AvalonToolkit_1.2.0.source.tar
 
 Note that the version number is important.
 
 Extract the tar file in $RDBASE/External/AvalonTools; the source required by the RDKit is in
 the SourceDistribution directory.
 
-cd to $RDBASE/External/AvalonTools and apply AvalonToolkit_1.1_beta_patch.txt:
+cd to $RDBASE/External/AvalonTools and apply AvalonToolkit_1.2_patch.txt:
 
-$ patch -p0 < AvalonToolkit_1.1_beta_patch.txt
+$ patch -p0 < AvalonToolkit_1.2_patch.txt
