--- a/External/INCHI-API/README
+++ b/External/INCHI-API/README
@@ -1,6 +1,20 @@
-To build the optional InChI support, you have to download the official InChI
-software distribution from the IUPAC website, and place the source code in this
-directory. Please follow these instructions.
+To build the optional InChI support, InChi sources are needed.
+If InChI could not be found, the CMake build system will attempt to
+download the InChI distribution from the following URL:
+
+http://www.inchi-trust.org/wp/wp-content/uploads/2014/06/INCHI-1-API.zip
+
+The default download URL and MD5 checksum can be overridden with the
+following CMake definitions:
+
+INCHI_URL
+INCHI_MD5SUM
+
+If INCHI_URL is set to "", no download will be attempted.
+If INCHI_MD5SUM is set to "", no MD5 checksum will be performed.
+
+If you prefer to install InChI sources manually, please follow these
+instructions:
 
 1. Download the zip file from
    http://www.inchi-trust.org/wp/wp-content/uploads/2014/06/INCHI-1-API.zip
@@ -22,4 +36,3 @@ etc), you may invoke the included script `download-inchi.sh`:
 
 When the download is successful, rerun`cmake` with
 `-DRDK_BUILD_INCHI_SUPPORT=ON` as an additional argument
- 
