Verified to run on python2 and 3

--- a/Code/GraphMol/ChemReactions/tutorial/EnumerationToolkit.ipynb
+++ b/Code/GraphMol/ChemReactions/tutorial/EnumerationToolkit.ipynb
@@ -97,7 +97,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAlgAAACWCAYAAAACG/YxAAAFd0lEQVR4nO3dbXLaOgCGUelOd9QF\nWllT15E1uT9y3RjjL+AlfPicmcwUI1KmBPtBVtza931fAACI+e/RTwAA4N0ILACAMIEFABAmsAAA\nwgQWAECYwAIACBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBM\nYAEAhAksAIAwgQUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQW\nAECYwAIACBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAEA\nhAksAIAwgQUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECY\nwAIACBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAHwUmqt\nj34KsElgAfBS+r4XWTw9gQXAyxFZPDuBdYX6WU++pvfBPbTWHv0U4KmIrNd0lJes9n3fP/pJvJL6\nWUv/uz/b1v3pSmtt9n64RK2ljN+VQ1h9fLSy9G4d77C8ozmaWmtxKFs39wFtum18e+0D3dq4tb9n\n2E/1/de2PR8a9457Rr8e/QReyVI8DXEFKbWW0nWtlDIOrOWx42PL9Da8u2EmS2Stm4uhYds0ZJbC\nZs+46e3zsLr8ub4igXWD8Q8mpK3NWI05poDIutXe49glx7shrLqunR0vt77POxxfrcG60lDtr/zi\n83zGn/T2jJtuM3vFkVmTlTE3S7Vn3PS+vr9sf/Rux1MzWFcQVqSNw2r657kd1No2kcWRmclatne9\n1LXjpuMvnYV6t+OqwLpQ/aylb9645KwF0VpkAfNE1rytWalbFp4vfe93i6ZLOEW409rlF1yagVvc\negxwRuRcrdXXwb+GnwPmrS1WX/tnW3rc3kXxR2IGa4fpbw9Og8plGRhb2sks3V7b+bTWSteVUuvy\nGM6ZuaBWM1jXmi5VKGV+Jr21tuvyMV13n+f57A4fWFsHwyGuxhW+FlTdn66U3+EnycuZC6rxeoSl\nT47Ljzn9VDne2Y13hsNtODJxdZ3xfqjrvm5P9zvD9u9xrZTyfXs8dngJhv3X1kvybrNdh7/Q6NK5\n5LnFeVszDXvG8f62fqb2jL9lHByZuLqP+v+1+aYzVnvC6ZJx78QarA0OftzT3GzWnnHAOXF1X19L\nFpb3RXNrt+qBLx9z+FOEt3DQY8namqvxtmvHAafE1c/4Pm3Yhi3/7nP5mFMCq+w7GO55HAy2ZqXM\njEKOuPpZX+s+h1OFrcytwcIpwlKKq7JzX3sXtW89Djgnrh7r46PNbneFDIF1xkEN4DWIq8eZ/vYy\n55wihAdYOi29tehd/MMXcfV408hy+ZhTAusGZruYs7Tmau3+S8fBkYmrn7f233ktjTn6S3T462AB\nAKRZgwUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECYwAIA\nCBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAEAhAksAIAw\ngQUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECYwAIACBNY\nAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAEAhAksAIAwgQUA\nECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECYwAIACBNYAABh\nAgsAIExgAQCE/QWlzQdz1MzSTQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<rdkit.Chem.rdChemReactions.ChemicalReaction at 0x10b1e24b0>"
+       "<rdkit.Chem.rdChemReactions.ChemicalReaction at 0x10d52d910>"
       ]
      },
      "execution_count": 3,
@@ -206,16 +206,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2016-10-17 20:57:55--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-benzylic-primary-amines.sdf\n",
-      "Resolving www.sigmaaldrich.com... 104.97.42.77\n",
-      "Connecting to www.sigmaaldrich.com|104.97.42.77|:80... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
+      "--2016-10-18 13:54:53--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-benzylic-primary-amines.sdf\n",
+      "Resolving usca-proxy01.na.novartis.net... 160.62.237.221\n",
+      "Connecting to usca-proxy01.na.novartis.net|160.62.237.221|:2011... connected.\n",
+      "Proxy request sent, awaiting response... 200 OK\n",
       "Length: 165130 (161K) [chemical/x-mdl-sdfile]\n",
       "Saving to: 'amines.sdf'\n",
       "\n",
-      "amines.sdf          100%[=====================>] 161.26K   347KB/s   in 0.5s   \n",
+      "amines.sdf          100%[=====================>] 161.26K  --.-KB/s   in 0.1s   \n",
       "\n",
-      "2016-10-17 20:57:56 (347 KB/s) - 'amines.sdf' saved [165130/165130]\n",
+      "2016-10-18 13:54:53 (1.23 MB/s) - 'amines.sdf' saved [165130/165130]\n",
       "\n"
      ]
     }
@@ -235,16 +235,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2016-10-17 20:57:56--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-alkyl-halides.sdf\n",
-      "Resolving www.sigmaaldrich.com... 104.97.42.77\n",
-      "Connecting to www.sigmaaldrich.com|104.97.42.77|:80... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
+      "--2016-10-18 13:54:53--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-alkyl-halides.sdf\n",
+      "Resolving usca-proxy01.na.novartis.net... 160.62.237.221\n",
+      "Connecting to usca-proxy01.na.novartis.net|160.62.237.221|:2011... connected.\n",
+      "Proxy request sent, awaiting response... 200 OK\n",
       "Length: 149722 (146K) [chemical/x-mdl-sdfile]\n",
       "Saving to: 'halides.sdf'\n",
       "\n",
-      "halides.sdf         100%[=====================>] 146.21K  --.-KB/s   in 0.1s   \n",
+      "halides.sdf         100%[=====================>] 146.21K   838KB/s   in 0.2s   \n",
       "\n",
-      "2016-10-17 20:57:56 (1.29 MB/s) - 'halides.sdf' saved [149722/149722]\n",
+      "2016-10-18 13:54:54 (838 KB/s) - 'halides.sdf' saved [149722/149722]\n",
       "\n"
      ]
     }
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit INFO: [20:57:56] Removed 37 non matching reagents at template 0\n"
+      "RDKit INFO: [13:54:54] Removed 37 non matching reagents at template 0\n"
      ]
     }
    ],
@@ -358,7 +358,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d811d70>\n"
+      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d90bde0>\n"
      ]
     }
    ],
@@ -499,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d811de0>\n"
+      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d90be50>\n"
      ]
     }
    ],
@@ -581,7 +581,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d80d280>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d9072f0>"
       ]
      },
      "execution_count": 17,
@@ -631,7 +631,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d811d00>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d90bd70>"
       ]
      },
      "execution_count": 18,
@@ -661,7 +661,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit INFO: [20:57:58] Removed 37 non matching reagents at template 0\n"
+      "RDKit INFO: [13:54:55] Removed 37 non matching reagents at template 0\n"
      ]
     },
     {
@@ -736,7 +736,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d80cd00>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d902d70>"
       ]
      },
      "execution_count": 21,
@@ -778,7 +778,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10cfed130>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d8f91a0>"
       ]
      },
      "execution_count": 22,
@@ -813,7 +813,7 @@
     }
    ],
    "source": [
-    "pos = test_enumerator.Next()\n",
+    "pos = test_enumerator.next()\n",
     "print(list(pos))"
    ]
   },
@@ -850,7 +850,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit INFO: [20:57:58] Removed 37 non matching reagents at template 0\n"
+      "RDKit INFO: [13:54:55] Removed 37 non matching reagents at template 0\n"
      ]
     }
    ],
@@ -1045,22 +1045,14 @@
     "\n",
     "*rdChemReactions.EvenSamplePairs* - evenly sample pairs of building blocks (use only for generation of small libraries)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
