--- a/Code/GraphMol/ChemReactions/tutorial/EnumerationToolkit.ipynb
+++ b/Code/GraphMol/ChemReactions/tutorial/EnumerationToolkit.ipynb
@@ -97,7 +97,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAlgAAACWCAYAAAACG/YxAAAFd0lEQVR4nO3dbXLaOgCGUelOd9QF\nWllT15E1uT9y3RjjL+AlfPicmcwUI1KmBPtBVtza931fAACI+e/RTwAA4N0ILACAMIEFABAmsAAA\nwgQWAECYwAIACBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBM\nYAEAhAksAIAwgQUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQW\nAECYwAIACBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAEA\nhAksAIAwgQUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECY\nwAIACBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAHwUmqt\nj34KsElgAfBS+r4XWTw9gQXAyxFZPDuBdYX6WU++pvfBPbTWHv0U4KmIrNd0lJes9n3fP/pJvJL6\nWUv/uz/b1v3pSmtt9n64RK2ljN+VQ1h9fLSy9G4d77C8ozmaWmtxKFs39wFtum18e+0D3dq4tb9n\n2E/1/de2PR8a9457Rr8e/QReyVI8DXEFKbWW0nWtlDIOrOWx42PL9Da8u2EmS2Stm4uhYds0ZJbC\nZs+46e3zsLr8ub4igXWD8Q8mpK3NWI05poDIutXe49glx7shrLqunR0vt77POxxfrcG60lDtr/zi\n83zGn/T2jJtuM3vFkVmTlTE3S7Vn3PS+vr9sf/Rux1MzWFcQVqSNw2r657kd1No2kcWRmclatne9\n1LXjpuMvnYV6t+OqwLpQ/aylb9645KwF0VpkAfNE1rytWalbFp4vfe93i6ZLOEW409rlF1yagVvc\negxwRuRcrdXXwb+GnwPmrS1WX/tnW3rc3kXxR2IGa4fpbw9Og8plGRhb2sks3V7b+bTWSteVUuvy\nGM6ZuaBWM1jXmi5VKGV+Jr21tuvyMV13n+f57A4fWFsHwyGuxhW+FlTdn66U3+EnycuZC6rxeoSl\nT47Ljzn9VDne2Y13hsNtODJxdZ3xfqjrvm5P9zvD9u9xrZTyfXs8dngJhv3X1kvybrNdh7/Q6NK5\n5LnFeVszDXvG8f62fqb2jL9lHByZuLqP+v+1+aYzVnvC6ZJx78QarA0OftzT3GzWnnHAOXF1X19L\nFpb3RXNrt+qBLx9z+FOEt3DQY8namqvxtmvHAafE1c/4Pm3Yhi3/7nP5mFMCq+w7GO55HAy2ZqXM\njEKOuPpZX+s+h1OFrcytwcIpwlKKq7JzX3sXtW89Djgnrh7r46PNbneFDIF1xkEN4DWIq8eZ/vYy\n55wihAdYOi29tehd/MMXcfV408hy+ZhTAusGZruYs7Tmau3+S8fBkYmrn7f233ktjTn6S3T462AB\nAKRZgwUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECYwAIA\nCBNYAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAEAhAksAIAw\ngQUAECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECYwAIACBNY\nAABhAgsAIExgAQCECSwAgDCBBQAQJrAAAMIEFgBAmMACAAgTWAAAYQILACBMYAEAhAksAIAwgQUA\nECawAADCBBYAQJjAAgAIE1gAAGECCwAgTGABAIQJLACAMIEFABAmsAAAwgQWAECYwAIACBNYAABh\nAgsAIExgAQCE/QWlzQdz1MzSTQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<rdkit.Chem.rdChemReactions.ChemicalReaction at 0x10d52d910>"
+       "<rdkit.Chem.rdChemReactions.ChemicalReaction at 0x10b867590>"
       ]
      },
      "execution_count": 3,
@@ -206,16 +206,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2016-10-18 13:54:53--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-benzylic-primary-amines.sdf\n",
+      "--2016-11-05 09:31:09--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-benzylic-primary-amines.sdf\n",
       "Resolving usca-proxy01.na.novartis.net... 160.62.237.221\n",
       "Connecting to usca-proxy01.na.novartis.net|160.62.237.221|:2011... connected.\n",
       "Proxy request sent, awaiting response... 200 OK\n",
       "Length: 165130 (161K) [chemical/x-mdl-sdfile]\n",
       "Saving to: 'amines.sdf'\n",
       "\n",
-      "amines.sdf          100%[=====================>] 161.26K  --.-KB/s   in 0.1s   \n",
+      "amines.sdf          100%[=====================>] 161.26K   759KB/s   in 0.2s   \n",
       "\n",
-      "2016-10-18 13:54:53 (1.23 MB/s) - 'amines.sdf' saved [165130/165130]\n",
+      "2016-11-05 09:31:09 (759 KB/s) - 'amines.sdf' saved [165130/165130]\n",
       "\n"
      ]
     }
@@ -235,16 +235,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2016-10-18 13:54:53--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-alkyl-halides.sdf\n",
+      "--2016-11-05 09:31:09--  http://www.sigmaaldrich.com/content/dam/sigma-aldrich/docs/Aldrich/General_Information/1/sdf-alkyl-halides.sdf\n",
       "Resolving usca-proxy01.na.novartis.net... 160.62.237.221\n",
       "Connecting to usca-proxy01.na.novartis.net|160.62.237.221|:2011... connected.\n",
       "Proxy request sent, awaiting response... 200 OK\n",
       "Length: 149722 (146K) [chemical/x-mdl-sdfile]\n",
       "Saving to: 'halides.sdf'\n",
       "\n",
-      "halides.sdf         100%[=====================>] 146.21K   838KB/s   in 0.2s   \n",
+      "halides.sdf         100%[=====================>] 146.21K   634KB/s   in 0.2s   \n",
       "\n",
-      "2016-10-18 13:54:54 (838 KB/s) - 'halides.sdf' saved [149722/149722]\n",
+      "2016-11-05 09:31:10 (634 KB/s) - 'halides.sdf' saved [149722/149722]\n",
       "\n"
      ]
     }
@@ -310,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit INFO: [13:54:54] Removed 37 non matching reagents at template 0\n"
+      "RDKit INFO: [09:31:10] Removed 37 non matching reagents at template 0\n"
      ]
     }
    ],
@@ -322,18 +322,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you believe your reagents are okay or have pre-filtered them, simply add filterReagents=False to the constructor"
+    "If you only want each reactant to match once ( and hence only produce one product per reactant set ) you can adjust the parameters:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RDKit INFO: [09:31:10] Removed 38 non matching reagents at template 0\n",
+      "RDKit INFO: [09:31:10] Removed 11 non matching reagents at template 1\n"
+     ]
+    }
+   ],
    "source": [
-    "library_unfiltered = rdChemReactions.EnumerateLibrary(rxn, reagents, filterReagents=False)"
+    "params = rdChemReactions.EnumerationParams()\n",
+    "params.reagentMaxMatchCount = 1\n",
+    "library = rdChemReactions.EnumerateLibrary(rxn, reagents, params=params)"
    ]
   },
   {
@@ -358,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d90bde0>\n"
+      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d9f7de0>\n"
      ]
     }
    ],
@@ -378,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Possible number of permutations: 14672\n"
+      "Possible number of permutations: 13320\n"
      ]
     }
    ],
@@ -445,8 +456,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of result sets 14672\n",
-      "Number of result molecules 16445\n"
+      "Number of result sets 13320\n",
+      "Number of result molecules 13320\n"
      ]
     }
    ],
@@ -485,7 +496,7 @@
     "How does the enumerator work?\n",
     "=============================\n",
     "\n",
-    "As mentioned, you can make a copy of the current enumeration scheme using the **GetEnumerator** method.  Lets make a copy of this enumerator by **Cloning** it, this makes a copy so we don't change the state of the Library."
+    "As mentioned, you can make a copy of the current enumeration scheme using the **GetEnumerator** method.  Lets make a copy of this enumerator by **copying** it using copy.copy(..), this makes a copy so we don't change the state of the Library."
    ]
   },
   {
@@ -499,14 +510,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d90be50>\n"
+      "<rdkit.Chem.rdChemReactions.CartesianProductStrategy object at 0x10d9f7e50>\n"
      ]
     }
    ],
    "source": [
-    "enumerator = library.GetEnumerator().Clone()\n",
+    "import copy\n",
+    "enumerator = copy.copy(library.GetEnumerator())\n",
     "print(enumerator)\n",
-    "test_enumerator = enumerator.Clone()"
+    "test_enumerator = copy.copy(enumerator)"
    ]
   },
   {
@@ -528,7 +540,7 @@
     {
      "data": {
       "text/plain": [
-       "[111, 130]"
+       "[110L, 119L]"
       ]
      },
      "execution_count": 16,
@@ -581,7 +593,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d9072f0>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d9f32f0>"
       ]
      },
      "execution_count": 17,
@@ -631,7 +643,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d90bd70>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d9f7d70>"
       ]
      },
      "execution_count": 18,
@@ -661,13 +673,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit INFO: [13:54:55] Removed 37 non matching reagents at template 0\n"
+      "RDKit INFO: [09:31:11] Removed 38 non matching reagents at template 0\n",
+      "RDKit INFO: [09:31:11] Removed 11 non matching reagents at template 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 0]"
+       "[0L, 0L]"
       ]
      },
      "execution_count": 19,
@@ -676,8 +689,8 @@
     }
    ],
    "source": [
-    "library = rdChemReactions.EnumerateLibrary(rxn, reagents)\n",
-    "test_enumerator = library.GetEnumerator().Clone()\n",
+    "library = rdChemReactions.EnumerateLibrary(rxn, reagents, params=params)\n",
+    "test_enumerator = copy.copy(library.GetEnumerator())\n",
     "list(test_enumerator.GetPosition())"
    ]
   },
@@ -699,7 +712,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[99, 0]\n"
+      "[99L, 0L]\n"
      ]
     }
    ],
@@ -736,7 +749,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d902d70>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d9f2d70>"
       ]
      },
      "execution_count": 21,
@@ -778,7 +791,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<rdkit.Chem.rdchem.Mol at 0x10d8f91a0>"
+       "<rdkit.Chem.rdchem.Mol at 0x10d9e51a0>"
       ]
      },
      "execution_count": 22,
@@ -808,7 +821,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100, 0]\n"
+      "[100L, 0L]\n"
      ]
     }
    ],
@@ -843,19 +856,20 @@
      "output_type": "stream",
      "text": [
       "State is:\n",
-      " '22 serialization::archive 12 0 1 1 31 RDKit::CartesianProductStrategy 1 1\\n0 0 1 2 0 99 0 2 0 112 131 14672 100\\n'\n"
+      " '22 serialization::archive 12 0 1 1 31 RDKit::CartesianProductStrategy 1 1\\n0 0 1 2 0 99 0 2 0 111 120 13320 100\\n'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RDKit INFO: [13:54:55] Removed 37 non matching reagents at template 0\n"
+      "RDKit INFO: [09:31:11] Removed 38 non matching reagents at template 0\n",
+      "RDKit INFO: [09:31:11] Removed 11 non matching reagents at template 1\n"
      ]
     }
    ],
    "source": [
-    "library = rdChemReactions.EnumerateLibrary(rxn, reagents)\n",
+    "library = rdChemReactions.EnumerateLibrary(rxn, reagents, params=params)\n",
     "# skip the first 100 molecules\n",
     "library.GetEnumerator().Skip(100)\n",
     "# get the state\n",
@@ -925,7 +939,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0]\n"
+      "[0L, 0L]\n"
      ]
     }
    ],
@@ -1045,6 +1059,15 @@
     "\n",
     "*rdChemReactions.EvenSamplePairs* - evenly sample pairs of building blocks (use only for generation of small libraries)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
